Fixed some spacing issues in the header section

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,10 +20,11 @@ html {
 }
 
 .title-container {
-	height: 50px;
+	height: 100px;
 }
 
 .title-styles {
+	display: inline-block;
 	font-family: 'Raleway', sans-serif;
 	font-size: 250%;
 }
@@ -35,7 +36,6 @@ html {
 
 header {
 	position: relative;
-	height: 520px;
 	min-height: 450px;
 	width: 100%;
 	background-size: cover;
@@ -47,13 +47,29 @@ header {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-	padding-top: 150px;
+	padding-top: 100px;
 	padding-bottom: 0;
+}
+
+header h1 {
+	font-size: 400%;
+	text-align: center;
+	font-weight: 600 !important;
+	color: #353239;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	width: 100%;
 }
 
 .language-icon {
 	font-size: 50px;
 	cursor: pointer;
+}
+
+.language {
+	font-size: 25px;
+	background-color: #cbd6f5;
+	padding-bottom: 10px;
+	padding-top: 20px;
 }
 
 .project-date {
@@ -74,22 +90,6 @@ header {
 	width: 100px;
 	margin: 5px 0 5px 0;
 	border-radius: 8px;
-}
-
-.language {
-	font-size: 25px;
-	background-color: #cbd6f5;
-	padding-bottom: 10px;
-	padding-top: 80px;
-}
-
-header h1 {
-	font-size: 400%;
-	text-align: center;
-	font-weight: 600 !important;
-	color: #353239;
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-	width: 100%;
 }
 
 .slider-image {
